# crawler_system_v3_JSON_LD

./: .dockerignore  .env.example  .gitignore  CORRECTION_REPORT.md  Dockerfile  Makefile  README.md  cake_logs.txt  cake_logs_v2.txt  company_clean_check.txt  docker-compose.yml  main.py  pyproject.toml  small_sample_test_plan.md
core/: __init__.py  celery_app.py  taskiq_app.py  tasks.py
core/adapters/: __init__.py  adapter_104.py  adapter_1111.py  adapter_cakeresume.py  adapter_factory.py  adapter_yes123.py  adapter_yourator.py  jsonld_adapter.py
dashboard/: dashboard.html  dashboard_server.py
docs/: CHANGELOG_SEQUENTIAL_EXECUTION.md  CORRECTION_LOG_20260129.md  DATABASE_SCHEMA.md  FINAL_ACCEPTANCE_REPORT.md  HISTORICAL_COMPLIANCE_FIXES.md  HISTORICAL_SYSTEM_CONSISTENCY.md  IMPLEMENTATION_COMPLETE.md  OPERATIONS.md  OPTIMIZATION_DECISION.md  OPTIMIZATION_PATCHES.md  OPTIMIZATION_WORKPLAN.md  PERFORMANCE_OPTIMIZATION.md  PROPOSAL_TEMPLATE.md  QUICK_REFERENCE_SEQUENTIAL.md  README.md  ROADMAP.md  SDD_API_SPEC.md  SDD_ARCHITECTURE.md  SDD_CODE_EXAMPLES.md  SDD_STANDARDS.md  SEQUENTIAL_CATEGORY_EXECUTION.md  TESTING_GUIDE.md
scripts/: check_dbs.py  cleanup_noise.py  debug_104.py  debug_1111_emp.py  debug_yes123_2.py  debug_yes123_emp.py  dump_raw_json.py  fix_1111_71694463.py  gemini_cli_fixed.py  inspect_104_company.py  inspect_companies.py  reset_db.py  sample_test_sql.py  test_104_regex.py  test_browser_fetcher.py  test_extraction_target.py  test_sequential_execution.py  verify_data.py  verify_fix_target.py  verify_fixes.py
test/: test_file_list.md
(+76 files in other folders)
